Yep, readme too

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-BF 3 News Aggregator
+Brink Developer Aggregator
 
-Running on bf3.immersedcode.org
+Running on brink.immersedcode.org
 
 Currently requires Werkzeug==dev
 
@@ -10,6 +10,6 @@ Things to do:
   2. install dependencies with `pip install -r requirements.txt`
   3. create a local.cfg:
 
-    SQLALCHEMY_DATABASE_URI = 'sqlite:////path/to/bf3.db'
+    SQLALCHEMY_DATABASE_URI = 'sqlite:////path/to/brink.db'
     FORUM_USERNAME = '...'
     FORUM_PASSWORD = '...'
